--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CSS/styles.css">
+    <link rel="stylesheet" href="/CSS/styles481px.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,136 +15,150 @@
 </head>
 <body>
     <header>
-        <section >
-            <div>
-                <img  src="images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
-            </div>
-            
+      <div class="top-header">
+            <div class="logo">
+                <img src="images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
+            </div>          
 
-            <form action="#" method="GET">
-                <i class="fas fa-search"></i>
-                <input type="text" placeholder="Buscar productos, marcas y más" >
-            </form>
-            
-            <p class="credito_cuotas"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
-
-            <nav>
-                <ul>
-                    <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Tiendas Oficiales</a></li>
-                    <li><a href="#">Vender</a></li>
-                    <li><a href="#">Ayuda</a></li><br>
-                </ul>
-                <ul>
-                    <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                    <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                    <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
-                </ul>
-            </nav>
-        </section>
-
+            <div class="form">
+                <form action="#" method="GET">
+                  <input type="text" placeholder= "Buscar productos, marcas y más">
+                  <button><i class="fas fa-search"></i></button>
+                    
+                </form>    
+            </div>              
+            <p class="copy-header"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
+      </div>
+        
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
+
+        <nav class="main-navbar">
+            
+             <ul>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">Vender</a></li>
+                <li><a href="#">Ayuda</a></li><br>
+              </ul>
+            
+            
+           
+            
+              <ul class="ul2" >
+                <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis compras <i class="fas  fa-shopping-basket"></i></a></li>
+               </ul>
+            
+            
+
+        </nav>
+
         
     </header>
 
     <section class="banner">
         <img src="images/img-home-banner.jpg" width="360" alt="home banner">
     </section>
+
+
+
     <main>
-        <section>
-            <h3 class="titulares">Basado en tu última visita</h3>
-            <article>
-                <div >
-                    <img src="images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
-                    <p class="precios">$6.770</p>
-                    <p class="descuentos">40% OFF</p>
-                    <h4 class="descripciones">Cafetera Moulinex</h4>
+        <section class="last-visit">
+            <h3>Basado en tu última visita</h3>
+            <div class="products">
+                <article>
+                    <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
 
-                </div>
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$6.770</p>
+                        <p class="discount">40% off</p>
+                        <h4 class="description">Cafetera Moulinex</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
 
-            </article>
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$230.000</p>
+                        <p class="discount">20% off</p>
+                        <h4 class="description">MacBook Pro 2019</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy"
+                        class="product_img">
 
-            <article>
-                <div >
-                    <img src="images/img-macbook-pro-2019.jpg" width="360" alt="Cafetera">
-                     
-                    <div class="carrito"><i class="fas fa-truck"></i></div>
-                   
-                    <p class="precios">$230.000</p>
-                    <p class="descuentos">20% OFF</p>
-                    <h4 class="descripciones">MacBook Pro 2019</h4>
-                </div>
-              
-            </article>
-
-            <article>
-                <div>
-                  <img src="images/img-samsung-galaxy-s10.jpg" width="360" alt="Cafetera">
-                  <p class="precios">$70.500</p>
-                  <p class="descuentos">10% OFF</p>
-                  <h4 class="descripciones">Samsung Galaxy S10</h4>
-                </div>
-               
-            </article>
-
-            <article>
-                <div>
-                    <img src="images/img-tv-samsung-smart.jpg" width="360" alt="Cafetera">
-                <p class="precios">$23.200</p>
-                <p class="descuentos">5% OFF</p>
-                <h4 class="descripciones">SmartTv Samsung 43"</h4>
-                </div>
-                
-            </article>
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$70.500</p>
+                        <p class="discount">10% off</p>
+                        <h4 class="description">Samsung Galaxy S10</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
+                    
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$23.200</p>
+                        <p class="discount">5% off</p>
+                        <h4 class="description">SmartTv Samsung 43"</h4>
+                    </div>
+                </article>
+            </div>
+            
         </section>
 
-        <section>
-            <h3 class="titulares">Sección de Ofertas</h3>
-            <article>
-              <div>
-                    <img src="images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera">
-                    <p class="precios">$6.770</p>
-                    <p class="descuentos">40% OFF</p>
-                    <h4 class="descripciones">Cafetera Moulinex</h4>
-              </div>
-                
-            </article>
+        <section class="offers">
+            <h3>Sección de Ofertas</h3>
+            <div class="products">
+                <article>
+                    <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
 
-            <article>
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$6.770</p>
+                        <p class="discount">40% off</p>
+                        <h4 class="description">Cafetera Moulinex</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
 
-              <div>
-                <img src="images/img-macbook-pro-2019.jpg" width="360" alt="Cafetera">
-                <p class="precios">$230.000</p>
-                <p class="descuentos">20% OFF</p>
-                <h4 class="descripciones">MacBook Pro 2019</h4>
-              </div>
-                
-            </article>
-
-            <article>
-                <div>
-                    <img src="images/img-samsung-galaxy-s10.jpg" width="360" alt="Cafetera">
-                    <p class="precios">$70.500</p>
-                    <p class="descuentos">10% OFF</p>
-                    <h4 class="descripciones">Samsung Galaxy S10</h4>
-               </div>     
-              
-            </article>
-
-            <article>
-                <div>
-                    <img src="images/img-tv-samsung-smart.jpg" width="360" alt="Cafetera">
-                    <p class="precios">$23.200</p>
-                    <p class="descuentos">5% OFF</p>
-                    <h4 class="descripciones">SmartTv Samsung 43"</h4>
-                </div>
-                
-                  
-                
-                
-            </article>
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$230.000</p>
+                        <p class="discount">20% off</p>
+                        <h4 class="description">MacBook Pro 2019</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy"
+                        class="product_img">
+                        
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$70.500</p>
+                        <p class="discount">10% off</p>
+                        <h4 class="description">Samsung Galaxy S10</h4>
+                    </div>
+                </article>
+                <article>
+                    <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
+                    <div class="main-article">
+                        <i class="fas fa-truck"></i>
+                        <p class="price">$23.200</p>
+                        <p class="discount">5% off</p>
+                        <h4 class="description">SmartTv Samsung 43"</h4>
+                    </div>
+                </article>
+            </div>
+            
         </section>
     </main>
 
@@ -152,8 +168,7 @@
                 <div>
                     <i class="fas fa-id-card"></i>
                     <h3 class="titulares-footer">Pagá con tarjeta o en efectivo</h3>
-                    <p class="descripciones">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                    puntos de pago. ¡Y siempre es seguro!</p>
+                    <p class="descripciones">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y siempre es seguro!</p>
                 </div>
                 
             </article>
@@ -162,8 +177,7 @@
                 <div>
                     <i class="fas fa-gift"></i>
                     <h3 class="titulares-footer">Envío gratis desde $ 2.500</h3>
-                    <p class="descripciones">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                    productos. Es un beneficio de Mercado Puntos</p>
+                    <p class="descripciones">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de Mercado Puntos</p>
                 </div>
 
             </article>
@@ -172,8 +186,7 @@
                 <div>
                      <i class="fas fa-user-shield"></i>
                      <h3 class="titulares-footer">Seguridad, de principio a fin</h3>
-                     <p class="descripciones">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                    porque estás siempre protegid@.</p>
+                     <p class="descripciones">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer, porque estás siempre protegid@.</p>
                 </div>
  
             </article>
