--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,6 +14,7 @@ body {
 
 h3 {
     font-size: 24px;
+    
 }
 
 P{
@@ -73,12 +74,12 @@ header div.logo img {
 
 
 .copy-header {
-    display: flex;
+    
     font-weight: 200px;
     font-size: 15px;
-    text-align: center;
-    padding: 5px;
-    justify-content: space-between;
+    text-align: end ;
+    
+    
 }
 
 
@@ -136,7 +137,7 @@ div.burger-menu {
 h3,
 .description {
     color: #666;
-    display: none;
+    
 }
 
 .description {
@@ -201,7 +202,7 @@ article div.main-article {
 
 
 footer {
-    margin: 5%;
+    margin: 2%;
     background-color: white;
 }
 
@@ -225,6 +226,3 @@ section.footer article i {
 
 
 
-@media (min-width: 768px) {
-    
-}
