--- a/views/home.html
+++ b/views/home.html
@@ -37,7 +37,9 @@
 
         <nav class="main-navbar">
             
-             <ul>
+           
+           
+            <ul>
                 <li><a href="#">Ofertas</a></li>
                 <li><a href="#">Tiendas Oficiales</a></li>
                 <li><a href="#">Vender</a></li>
@@ -48,10 +50,10 @@
            
             
               <ul class="ul2" >
-                <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas  fa-shopping-basket"></i></a></li>
-               </ul>
+            </ul>
             
             
 
@@ -199,3 +201,4 @@
     </footer>
 </body>
 </html>
+
