--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/CSS/styles.css">
     <link rel="stylesheet" href="/CSS/styles481px.css">
     <link rel="stylesheet" href="/CSS/styles769.css">
+    <link rel="stylesheet" href="/CSS/styles1280.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -194,10 +195,12 @@
  
             </article>
 
-            <article>
-                <h5>Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
-            </article>
+           
         </section>
+
+         <article>
+                <h5>Copyright © 1999-2020 MercadoLiebre S.R.L.</h5>
+         </article>
     </footer>
 </body>
 </html>
