--- a/public/css/login.css
+++ b/public/css/login.css
@@ -21,6 +21,13 @@
 }
 
 input::placeholder{
-    
     font-size: 100%;
+}
+
+.boton input{
+    transition: all 0.5s;
+}
+
+.boton input:hover{
+    background-color: #0022AA;
 }
