--- a/public/css/styles481px.css
+++ b/public/css/styles481px.css
@@ -86,15 +86,27 @@
         width: 50%;
     }
     main section article .description {
-        display: block; /*este display va a mostrar la descripcion pasado el ancho de 361 px*/
+        display:block;/*este display va a mostrar la descripcion pasado el ancho de 361 px*/
     }
+    
+    
+
+
+
+
+
 
     main section article {
         box-shadow: 0px 0px 10px rgb(100, 100, 100); /*se sonbreara los articulos pasados los 361px*/
         
     }
 
+    main section article {
 
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    }
+
+  
 
     /*Inicio de Main*/
 
