--- a/views/login.html
+++ b/views/login.html
@@ -22,7 +22,9 @@
     <header>
       <div class="top-header">
             <div class="logo">
-                <img src="images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
+                <a href="/"> <img src="images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre"></a>
+               
+                
             </div>          
 
             <div class="form">
@@ -52,7 +54,7 @@
            
             
               <ul class="ul2" >
-                <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
                 <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas  fa-shopping-basket"></i></a></li>
                </ul>
@@ -79,7 +81,10 @@
 
         <input type="password" name="password" placeholder="Elegí tu contraseña">
 
-        <input type="submit" value="Enviar">
+       
+       <span class="boton">
+           <input type="submit" value="Enviar">
+       </span> 
         </div>
    
     </form>
