--- a/views/register.html
+++ b/views/register.html
@@ -20,7 +20,8 @@
     <header>
       <div class="top-header">
             <div class="logo">
-                <img src="images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
+                <a href="/"><img src="images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre"></a>
+                
             </div>          
 
             <div class="form">
@@ -51,7 +52,7 @@
             
               <ul class="ul2" >
                 <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis compras <i class="fas  fa-shopping-basket"></i></a></li>
                </ul>
             
