--- a/public/css/styles1280.css
+++ b/public/css/styles1280.css
@@ -60,7 +60,7 @@
     .main-navbar{
         display: flex;
         justify-content: space-between;
-        margin: 4% auto 0%;
+        margin-top: 60px;
         
     }
     
