--- a/public/css/styles769.css
+++ b/public/css/styles769.css
@@ -2,9 +2,7 @@
 /*Media Querys*/
 @media (min-width: 769px) {
 
-    header{
-        padding: 2%;
-    }
+   
 
     .top-header  {   
     
@@ -53,6 +51,7 @@
     .main-navbar{
         display: flex;
         justify-content: space-between;
+        margin-top: 20px;
         
     }
     
