--- a/views/login.html
+++ b/views/login.html
@@ -37,31 +37,36 @@
             <p class="copy-header"><i class="fas fa-hand-holding-usd"></i> Comprá en cuotas y sin tarjeta de crédito</p>
       </div>
         
+      
+      <nav class="main-navbar">
+            
+           
+           
+        <ul>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Tiendas Oficiales</a></li>
+            <li><a href="#">Vender</a></li>
+            <li><a href="#">Ayuda</a></li><br>
+          </ul>
+        
+        
+       
+        
+          <ul class="ul2" >
+            <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+            <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+            <li><a href="#">Mis compras <i class="fas  fa-shopping-basket"></i></a></li>
+        </ul>
+        
+        
+
+    </nav>
+
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>
 
-        <nav class="main-navbar">
-            
-             <ul>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li><br>
-              </ul>
-            
-            
-           
-            
-              <ul class="ul2" >
-                <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                <li><a href="#">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis compras <i class="fas  fa-shopping-basket"></i></a></li>
-               </ul>
-            
-            
-
-        </nav>
+      
 
         
     </header>
